--- a/src/3rdparty/3rdparty.vcxproj
+++ b/src/3rdparty/3rdparty.vcxproj
@@ -14,10 +14,28 @@
     <ClCompile Include="glad\gl.c" />
     <ClCompile Include="glad\wgl.c" />
     <ClCompile Include="glm\detail\glm.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Miniaudio.cpp" />
+    <ClCompile Include="minimp3_ex.cpp" />
     <ClCompile Include="stb\stb.cpp" />
+    <ClCompile Include="tiny_gltf.cpp" />
     <ClCompile Include="tiny_obj_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FLAC\all.h" />
+    <ClInclude Include="FLAC\assert.h" />
+    <ClInclude Include="FLAC\callback.h" />
+    <ClInclude Include="FLAC\export.h" />
+    <ClInclude Include="FLAC\format.h" />
+    <ClInclude Include="FLAC\metadata.h" />
+    <ClInclude Include="FLAC\ordinals.h" />
+    <ClInclude Include="FLAC\stream_decoder.h" />
+    <ClInclude Include="FLAC\stream_encoder.h" />
     <ClInclude Include="glad\gl.h" />
     <ClInclude Include="glad\wgl.h" />
     <ClInclude Include="glmHeader.h" />
@@ -309,6 +327,19 @@
     <ClInclude Include="glm\vec3.hpp" />
     <ClInclude Include="glm\vec4.hpp" />
     <ClInclude Include="glm\vector_relational.hpp" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="json.h" />
+    <ClInclude Include="miniaudio.h" />
+    <ClInclude Include="minimp3\minimp3.h" />
+    <ClInclude Include="minimp3\minimp3_ex.h" />
     <ClInclude Include="stb\stb_connected_components.h" />
     <ClInclude Include="stb\stb_herringbone_wang_tile.h" />
     <ClInclude Include="stb\stb_image.h" />
@@ -320,6 +351,7 @@
     <ClInclude Include="stb\stb_tilemap_editor.h" />
     <ClInclude Include="stb\stb_truetype.h" />
     <ClInclude Include="stb\stb_vorbis.h" />
+    <ClInclude Include="tiny_gltf.h" />
     <ClInclude Include="tiny_obj_loader.h" />
   </ItemGroup>
   <ItemGroup>
