--- a/src/Demo/Demo.vcxproj
+++ b/src/Demo/Demo.vcxproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <ClCompile Include="DemoApp001.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="GraphicsResources.cpp" />
     <ClCompile Include="GraphicsSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -107,7 +108,9 @@
   <ItemGroup>
     <ClInclude Include="DemoApp001.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="GraphicsResources.h" />
     <ClInclude Include="GraphicsSystem.h" />
+    <ClInclude Include="MVector.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
